Implement end-to-end auth/MFA/upload/queue/transcription APIs and worker

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,13 +8,26 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.879.0",
+    "@aws-sdk/s3-request-presigner": "^3.879.0",
+    "bcryptjs": "^2.4.3",
+    "bullmq": "^5.58.0",
+    "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
+    "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "5.5.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "20.14.11",
-    "@types/react": "18.3.3"
+    "@types/pg": "^8.15.5",
+    "@types/qrcode": "^1.5.5",
+    "@types/react": "18.3.3",
+    "typescript": "5.5.4"
   }
 }
