--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -7,11 +7,16 @@
     "dev": "tsx src/index.ts"
   },
   "dependencies": {
-    "openai": "^4.56.0"
+    "@aws-sdk/client-s3": "^3.879.0",
+    "bullmq": "^5.58.0",
+    "dotenv": "^16.6.1",
+    "ioredis": "^5.7.0",
+    "openai": "^4.56.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/node": "^20.14.11",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.4",
-    "@types/node": "^20.14.11"
+    "typescript": "^5.5.4"
   }
 }
