Add external diarization integration hook and transcript match inspection API

--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,15 @@ MFA_ISSUER=TranscribeTool
 
 TRANSCRIPTION_PROVIDER=openai
 FALLBACK_PROVIDER=
-DIARIZATION_PROVIDER=openai
+DIARIZATION_PROVIDER=none
+DIARIZATION_EXTERNAL_ENDPOINT=
+DIARIZATION_EXTERNAL_TOKEN=
 
 OPENAI_API_KEY=
 OPENAI_TRANSCRIBE_MODEL=gpt-4o-mini-transcribe
 
 GEMINI_API_KEY=
-GEMINI_TRANSCRIBE_MODEL=
+GEMINI_TRANSCRIBE_MODEL=gemini-2.0-flash
+
+SPEAKER_AUTO_THRESHOLD=0.78
+SPEAKER_SUGGEST_THRESHOLD=0.70
