Integrate Google STT diarization option and wiring for speaker-tag pipeline

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,10 @@ GEMINI_TRANSCRIBE_MODEL=gemini-2.0-flash
 
 SPEAKER_AUTO_THRESHOLD=0.78
 SPEAKER_SUGGEST_THRESHOLD=0.70
+
+GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_STT_LANGUAGE=ja-JP
+GOOGLE_STT_SPEAKER_COUNT=2
+GOOGLE_STT_MODEL=latest_long
+GOOGLE_STT_ENCODING=MP3
+GOOGLE_STT_SAMPLE_RATE=16000
