--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.879.0",
+    "@google-cloud/speech": "^6.6.1",
     "bullmq": "^5.58.0",
     "dotenv": "^16.6.1",
     "ioredis": "^5.7.0",
